2007-06-18  Martin Leidig  <mleidig@schlund.de>

	* projects/core/xsl/forminput.xsl: bugfix: calling image geometry extension
	function with percentage values causes NumberFormatException, quickfix just
	copies width/height percentage values without calling the extension function
	for pfx:xinp@type='image' elements

2007-06-15  Martin Leidig  <mleidig@schlund.de>

	* src/de/schlund/pfixcore/workflow/Context.java: include __frame parameter to
	reuse redirect URL (if existing)

2007-06-15  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* projects/core/editor2/txt/pages/main_home.xml: 
	Corrected wrong links on start page.

2007-06-13  Martin Leidig  <mleidig@schlund.de>

	* src/de/schlund/pfixcore/webservice/ServiceDescriptor.java: detect service
	methods from super classes

2007-06-08  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* src/de/schlund/pfixcore/editor2/core/spring/internal/PageImpl.java:
	Fixed NullPointerException being raised when getThemes was called on a
	page object not having a target object. 

2007-06-04  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* src/de/schlund/pfixcore/editor2/frontend/util/EditorApplicationContextFactory.java (run): 
	Use getBeanNamesForType() instead of deprecated getBeanDefinitionNames() method.

2007-06-01  Martin Leidig  <mleidig@schlund.de>

	* projects/core/script/webservice_json.js: Fixed problem with old Safari versions (broken
	regexp replace callback).

2007-05-31  jtl  <jtl@schlund.de>

	* src/de/schlund/pfixcore/util/ImportText.java (handleInclude): use the method below on import...
	also reorganized the code a bit.
	* src/de/schlund/pfixcore/util/DumpText.java (stringForNode): new method. 
	used to create a checksum over the structure of the tags (this can be used to re-check on import
	after the dumped text has been translated to make sure the tag structure is still the same)

2007-05-30  Sebastian Marsching  <sebastian.marsching@1und1.de>
